<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by S M Al Hasib on 1/21/21 5:38 PM
  ~ Copyright (c) 2021 . All rights reserved.
  ~ Last modified 1/21/21 5:38 PM
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mainRecyclerView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/add"
            android:tint="@android:color/white"
            android:backgroundTint="@color/design_default_color_primary"
            android:contentDescription="@string/add"
            android:id="@+id/addBtn" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/addBtn"
            app:layout_constraintEnd_toEndOf="@id/addBtn"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:visibility="invisible"
            android:src="@drawable/call"
            android:tint="@android:color/white"
            android:backgroundTint="@color/design_default_color_primary"
            android:contentDescription="@string/make_a_call"
            android:id="@+id/callBtn" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/callBtn"
            app:layout_constraintEnd_toEndOf="@id/callBtn"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:visibility="invisible"
            android:src="@drawable/message"
            android:tint="@android:color/white"
            android:backgroundTint="@color/design_default_color_primary"
            android:contentDescription="@string/send_a_message"
            android:id="@+id/messageBtn" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/messageBtn"
            app:layout_constraintEnd_toEndOf="@id/messageBtn"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/email"
            android:visibility="invisible"
            android:tint="@android:color/white"
            android:contentDescription="@string/send_a_email"
            android:backgroundTint="@color/design_default_color_primary"
            android:id="@+id/emailBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>